obk-infra-trunk/app-argo/uat/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-bangkok
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: generic-alb
spec:
  rules:
    - host: iam-uat.glorymtel.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ob-iam
                port:
                  number: 80
